# dirlete

./: FolderCleaner.ps1  README.md  build.ps1  dirlete-worker.ps1  dirlete.ps1
.claude/: settings.local.json
app/: COMPILATION_FIXES.md  DIALOG_FIX.md  PROGRESSIVE_SCANNING.md  QUICKSTART.md  README.md  RELATIVE_PATHS.md  SIZE_CALCULATION.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/src/: App.css  App.tsx  SidebarContext.tsx  ThemeContext.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs
app/src-tauri/src/cleaner/: delete.rs  mod.rs  models.rs  scan.rs
app/src-tauri/src/cleaner/platform/: mod.rs  unix.rs  windows.rs
app/src/components/: IgnorePathsInput.tsx  PatternInput.tsx  ProgressBar.tsx  ResultsTable.tsx  RootPicker.tsx  ScanControls.tsx  VideoCard.tsx
app/src/features/files/: FilesSidebar.tsx
app/src/features/video/: FloatingDeleteBar.tsx  MultiWatchPanel.tsx  VideoActionButtons.tsx  VideoBrowseGrid.tsx  VideoKeyboardHint.tsx  VideoModal.tsx  VideoSidebar.tsx  VideoTabs.tsx  useVideoKeyboardShortcuts.ts  videoActionsStorage.ts
app/src/hooks/: useFilesCleaner.ts  useVideoCuller.ts
app/src/pages/: FilesPage.tsx  VideoPage.tsx
app/src/types/: ipc.ts
app/src/ui/: Button.tsx  Checkbox.tsx  DualRangeSlider.tsx  EmptyState.tsx  FieldLabel.tsx  IconButton.tsx  RangeInput.tsx  Select.tsx  SidebarSection.tsx  Spinner.tsx  TagInput.tsx  TextInput.tsx
app/src/utils/: formatBytes.ts
