[package]
name = "dirlete"
version = "1.0.0"
description = "Delete node_modules and other folders efficiently"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
anyhow = "1.0"
wildmatch = "2.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "winnt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
